# endian_codec

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.tpl
.github/workflows/: main.yml
endian_codec_derive/: Cargo.toml
endian_codec_derive/src/: lib.rs
endian_serde_derive/: Cargo.toml
endian_serde_derive/src/: attr.rs  lib.rs
src/: lib.rs
