[package]
name = "endian_codec"
description = "(De/En)code rust types as packed bytes with specific order"
version = "0.1.0"
authors = ["Sylwester Rąpała <sylwesterrapala@outlook.com>"]
edition = "2018"

documentation="https://docs.rs/endian_codec"
repository="https://github.com/xoac/endian_codec"
keywords = ["no_std", "endian", "bytes"]
categories = ["no-std", "parsing"]
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
endian_codec_derive = { path = "endian_codec_derive", optional = true }

[features]
default = ["derive"]

derive = ["endian_codec_derive"]
